# MovieRussianRoulette

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Cli.cpp  Cli.hpp  DbClient.cpp  DbClient.hpp  Movie.cpp  Movie.hpp  MovieRussianRoulette.cpp  MovieRussianRoulette.h  README.md  Utils.cpp  Utils.h  vcpkg.json
